# securePy

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
securepy/: __main__.py  cli.py  main.py
securepy/analysis/: __init__.py  helpers.py  import_resolver.py  interprocedural.py  taint.py
securepy/models/: __init__.py  enums.py  finding.py  function_summary.py  trace.py
securepy/reporting/: __init__.py  console_reporter.py  json_reporter.py
securepy/rules/: __init__.py  assert_security.py  base.py  command_injection.py  debug_mode.py  exec_eval.py  hardcoded_secret.py  insecure_tempfile.py  path_traversal.py  sql_injection.py  unsafe_deserialization.py  weak_crypto.py
securepy/scanner/: __init__.py  file_discovery.py  orchestrator.py  parser.py  project_index.py
securepy/utils/: __init__.py  entropy.py  paths.py  snippets.py
test/: bad.py
vscode-extension/: securepy-vscode-setup.md
vscode-extension/securepy/: CHANGELOG.md  README.md  package-lock.json  package.json  securepy-0.0.1.vsix
vscode-extension/securepy/src/: extension.ts
