[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "securepy"
version = "1.0.0"
description = "A powerful static security analyzer for Python code"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Ayush Patel and Ryan Lunsford"}]
keywords = ["security", "static-analysis", "vulnerability-detection"]

[project.urls]
Homepage = "https://github.com/rtl0019/securePy"
Repository = "https://github.com/rtl0019/securePy.git"

[project.scripts]
securepy = "securepy.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.hatch.build.targets.wheel]
packages = ["securepy"]
